--- a/fmb/proxychains.conf
+++ b/fmb/proxychains.conf
@@ -7,7 +7,7 @@
 # only one option should be uncommented at time,
 # otherwise the last appearing option will be accepted
 #
-#dynamic_chain
+dynamic_chain
 #
 # Dynamic - Each connection will be done via chained proxies
 # all proxies chained in the order as they appear in the list
@@ -442,94 +442,94 @@ socks5 89.238.142.244	1080	rinEa0rwR	Tqqhl09soOmm
 #socks5 81.171.107.143	1080	rinEa0rwR	Tqqhl09soOmm
 #socks5 81.171.107.22	1080	rinEa0rwR	Tqqhl09soOmm
 #socks5 81.171.107.3	1080	rinEa0rwR	Tqqhl09soOmm
-AU
-socks5 103.209.252.19	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 103.209.252.15	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 103.209.252.21	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 103.209.252.17	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 103.209.252.23	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 103.209.252.11	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 103.209.252.9	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 103.209.252.13	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.11	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.26	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.29	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.24	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.7	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.18	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.67	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.30	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.25	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.2	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.19	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.20	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.28	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.39	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.34	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.41	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.14	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.8	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.7	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.129	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.15	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.3	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.17	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.16	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.4	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.9	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.44	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.35	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.27	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.9	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.16	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.12	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.22	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.32	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.63	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.18	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.5	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.65	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.23	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.37	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.10	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.40	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.38	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.32	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.5	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.96	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.33	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 173.245.209.30	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.36	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 81.171.108.13	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.42	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 209.107.195.26	1080	rinEa0rwR	Tqqhl09soOmm
-CA
-socks5 66.70.129.97	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 198.50.128.201	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.34	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.22	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.16	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.6	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.8	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.20	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.36	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.40	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.18	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.44	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.14	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.12	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.4	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.10	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 216.151.184.28	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.134	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.163	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.136	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.161	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.130	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.167	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.132	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.138	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 107.181.189.165	1080	rinEa0rwR	Tqqhl09soOmm
+#AU
+#socks5 103.209.252.19	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 103.209.252.15	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 103.209.252.21	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 103.209.252.17	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 103.209.252.23	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 103.209.252.11	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 103.209.252.9	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 103.209.252.13	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.11	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.26	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.29	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.24	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.7	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.18	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.67	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.30	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.25	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.2	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.19	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.20	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.28	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.39	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.34	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.41	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.14	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.8	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.7	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.129	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.15	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.3	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.17	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.16	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.4	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.9	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.44	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.35	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.27	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.9	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.16	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.12	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.22	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.32	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.63	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.18	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.5	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.65	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.23	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.37	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.10	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.40	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.38	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.32	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.5	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.96	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.33	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 173.245.209.30	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.36	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 81.171.108.13	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.42	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 209.107.195.26	1080	rinEa0rwR	Tqqhl09soOmm
+#CA
+#socks5 66.70.129.97	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 198.50.128.201	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.34	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.22	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.16	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.6	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.8	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.20	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.36	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.40	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.18	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.44	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.14	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.12	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.4	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.10	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 216.151.184.28	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.134	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.163	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.136	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.161	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.130	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.167	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.132	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.138	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 107.181.189.165	1080	rinEa0rwR	Tqqhl09soOmm
 #SPAIN
 #socks5 81.171.69.2	1080	rinEa0rwR	Tqqhl09soOmm
 #DE
