--- a/fmb/proxychains.conf
+++ b/fmb/proxychains.conf
@@ -7,7 +7,7 @@
 # only one option should be uncommented at time,
 # otherwise the last appearing option will be accepted
 #
-dynamic_chain
+#dynamic_chain
 #
 # Dynamic - Each connection will be done via chained proxies
 # all proxies chained in the order as they appear in the list
