--- a/fmb/proxychains.conf
+++ b/fmb/proxychains.conf
@@ -35,7 +35,7 @@ random_chain
 #quiet_mode
 
 # Proxy DNS requests - no leak for DNS data
-proxy_dns 
+#proxy_dns 
 
 # Some timeouts in milliseconds
 tcp_read_time_out 15000
@@ -247,24 +247,24 @@ socks5 64.145.76.14	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 64.145.94.38	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 209.234.253.22	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 64.145.94.40	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 69.16.147.3	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 69.16.147.3	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.32	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 69.16.147.13	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 69.16.147.13	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.2	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.5	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.34	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.30	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 69.16.147.24	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 69.16.147.24	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.36	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 69.16.147.18	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 69.16.147.18	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.152.134	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.152.132	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.192	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 69.16.147.15	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 69.16.147.15	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.20	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.4	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 69.16.147.22	1080	rinEa0rwR	Tqqhl09soOmm
-socks5 69.16.147.28	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 69.16.147.22	1080	rinEa0rwR	Tqqhl09soOmm
+#socks5 69.16.147.28	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.26	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.11	1080	rinEa0rwR	Tqqhl09soOmm
 socks5 69.16.147.9	1080	rinEa0rwR	Tqqhl09soOmm
